--- a/Weed-Identification-Project.ipynb
+++ b/Weed-Identification-Project.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# Checks for the condo environment where kernel is running\n",
     "import sys\n",
-    "print(sys.executable)\n"
+    "print(sys.executable)"
    ]
   },
   {
@@ -57,6 +57,8 @@
    ],
    "source": [
     "import kagglehub\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module='keras.src.trainers.data_adapters.py_dataset_adapter')\n",
     "\n",
     "# Download dataset locally\n",
     "path = kagglehub.dataset_download(\"fpeccia/weed-detection-in-soybean-crops\")\n",
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b0620199-4b1a-48f6-bc43-478156ad37c7",
    "metadata": {},
    "outputs": [
@@ -206,7 +208,17 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
     "# Create image generator instance, splitting 20% of data into val set\n",
-    "datagen = ImageDataGenerator(rescale=1./255, validation_split=0.2)\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    validation_split=0.2,\n",
+    "    rotation_range=20,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.1,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=True,\n",
+    "    brightness_range=[0.8, 1.2]\n",
+    ")\n",
     "\n",
     "# Create training data generator, 80% of the data\n",
     "train_generator = datagen.flow_from_directory(\n",
@@ -229,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "4284fc72-1a1d-467d-8ff5-405097056503",
    "metadata": {},
    "outputs": [],
@@ -239,18 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d2861d17-8b6d-46c5-b7e1-c214d3b52d75",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\16302\\miniconda3\\envs\\ds_env\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -359,28 +363,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\16302\\miniconda3\\envs\\ds_env\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:121: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
-      "  self._warn_if_super_not_called()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "\u001b[1m384/384\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m514s\u001b[0m 1s/step - accuracy: 0.7493 - loss: 0.6924 - val_accuracy: 0.8992 - val_loss: 0.2821\n",
-      "Epoch 2/10\n",
-      "\u001b[1m384/384\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m431s\u001b[0m 1s/step - accuracy: 0.8894 - loss: 0.2971 - val_accuracy: 0.9250 - val_loss: 0.2059\n",
-      "Epoch 3/10\n",
-      "\u001b[1m384/384\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m433s\u001b[0m 1s/step - accuracy: 0.9125 - loss: 0.2410 - val_accuracy: 0.9351 - val_loss: 0.1732\n",
-      "Epoch 4/10\n",
-      "\u001b[1m  7/384\u001b[0m \u001b[37m━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m6:27\u001b[0m 1s/step - accuracy: 0.9655 - loss: 0.1629"
-     ]
     }
    ],
    "source": [
@@ -388,30 +370,23 @@
     "\n",
     "# Import required Keras modules\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
+    "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
     "\n",
     "# Define the CNN architecture\n",
     "model = Sequential([\n",
-    "    # First convolutional block\n",
-    "    Conv2D(32, (3, 3), activation='relu', input_shape=(224, 224, 3)),\n",
+    "    Input(shape=(224, 224, 3)),  # ✅ First layer defines the input shape\n",
+    "    Conv2D(32, (3, 3), activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "\n",
-    "    # Second convolutional block\n",
     "    Conv2D(64, (3, 3), activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "\n",
-    "    # Third convolutional block\n",
     "    Conv2D(128, (3, 3), activation='relu'),\n",
     "    MaxPooling2D(pool_size=(2, 2)),\n",
     "\n",
-    "    # Flatten feature maps to feed into dense layers\n",
     "    Flatten(),\n",
-    "\n",
-    "    # Dense layer with dropout for regularization\n",
     "    Dense(128, activation='relu'),\n",
     "    Dropout(0.5),\n",
-    "\n",
-    "    # Output layer: one neuron per class\n",
     "    Dense(train_generator.num_classes, activation='softmax')\n",
     "])\n",
     "\n",
@@ -424,12 +399,66 @@
     "\n",
     "# Show the model summary\n",
     "model.summary()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6ac52f08-3326-4317-915c-019cf6aa8f9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computed class weights: {np.int32(0): np.float64(3.2187827911857294), np.int32(1): np.float64(1.0893110795454546), np.int32(2): np.float64(1.1798076923076923), np.int32(3): np.float64(0.5198271479410269)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "import numpy as np\n",
     "\n",
-    "# Train the model\n",
+    "# Get the integer labels from your training generator\n",
+    "labels = train_generator.classes\n",
+    "\n",
+    "# Compute balanced class weights\n",
+    "class_weights = compute_class_weight(\n",
+    "    class_weight='balanced',\n",
+    "    classes=np.unique(labels),\n",
+    "    y=labels\n",
+    ")\n",
+    "\n",
+    "# Convert to dictionary for Keras\n",
+    "class_weights = dict(zip(np.unique(labels), class_weights))\n",
+    "print(\"Computed class weights:\", class_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "716c95eb-632e-418a-9ff9-24cd151e75b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m384/384\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m736s\u001b[0m 2s/step - accuracy: 0.6035 - loss: 1.0215 - val_accuracy: 0.8311 - val_loss: 0.4858\n",
+      "Epoch 2/10\n",
+      "\u001b[1m 42/384\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m8:22\u001b[0m 1s/step - accuracy: 0.7661 - loss: 0.6779"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model with class_weight\n",
     "history = model.fit(\n",
     "    train_generator,\n",
     "    validation_data=val_generator,\n",
-    "    epochs=10\n",
+    "    epochs=10,\n",
+    "    class_weight=class_weights   \n",
     ")\n",
     "\n",
     "# Plot accuracy and loss curves\n",
