commented out model training code so won't be re-executed each time when notebook is restarted

--- a/Capstone V2.ipynb
+++ b/Capstone V2.ipynb
@@ -573,41 +573,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "5dd916a9-556c-482a-b47c-abcfbb017727",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m752s\u001b[0m 2s/step - accuracy: 0.6436 - loss: 0.9116 - val_accuracy: 0.8318 - val_loss: 0.4453\n",
-      "Epoch 2/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m714s\u001b[0m 2s/step - accuracy: 0.8319 - loss: 0.4647 - val_accuracy: 0.8938 - val_loss: 0.2900\n",
-      "Epoch 3/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m733s\u001b[0m 2s/step - accuracy: 0.8719 - loss: 0.3672 - val_accuracy: 0.8057 - val_loss: 0.5057\n",
-      "Epoch 4/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m704s\u001b[0m 2s/step - accuracy: 0.8844 - loss: 0.3160 - val_accuracy: 0.8837 - val_loss: 0.2904\n",
-      "Epoch 5/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m710s\u001b[0m 2s/step - accuracy: 0.8971 - loss: 0.2846 - val_accuracy: 0.8895 - val_loss: 0.2647\n",
-      "Epoch 6/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m704s\u001b[0m 2s/step - accuracy: 0.9167 - loss: 0.2510 - val_accuracy: 0.9067 - val_loss: 0.2431\n",
-      "Epoch 7/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m699s\u001b[0m 2s/step - accuracy: 0.9203 - loss: 0.2435 - val_accuracy: 0.9131 - val_loss: 0.2210\n",
-      "Epoch 8/8\n",
-      "\u001b[1m408/408\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m694s\u001b[0m 2s/step - accuracy: 0.9259 - loss: 0.2344 - val_accuracy: 0.9352 - val_loss: 0.1660\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the model with class weights  \n",
-    "history = cnn_model.fit(\n",
-    "   train_gen,\n",
-    "   validation_data=val_gen,\n",
-    "   epochs=8,\n",
-    "   class_weight=class_weights\n",
-    ")"
+    "# history = cnn_model.fit(\n",
+    "#    train_gen,\n",
+    "#    validation_data=val_gen,\n",
+    " #   epochs=8,\n",
+    "#    class_weight=class_weights\n",
+    "#)"
    ]
   },
   {
@@ -775,8 +752,8 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "264b8e2e-fed1-48dd-8852-8a737b275e47",
+   "cell_type": "markdown",
+   "id": "4ba9b7ce-f046-4ef8-9390-589aebe9709c",
    "metadata": {},
    "source": [
     "Plots show there is improvement in both training and validation accuracy and overall decrease in training and validation loss; this indicates model is learning effectively and generalizes well on unseen data with no signs of overfitting.\n"
