--- a/Capstone V3.ipynb
+++ b/Capstone V3.ipynb
@@ -1643,7 +1643,7 @@
    "id": "965cd397",
    "metadata": {},
    "source": [
-    "### Un Freesign EffNet"
+    "### Unfreezing EffNet"
    ]
   },
   {
